--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
+      apiKey: "AIzaSyALeTY7dIedeX8yvAW9REVLbTJxAfK0ZbM",
+      authDomain: "ficha-base-op.firebaseapp.com",
+      projectId: "ficha-base-op",
+      storageBucket: "ficha-base-op.appspot.com",
+      messagingSenderId: "1060260450476",
+      appId: "1:1060260450476:web:84aa60fc14861c78e8cf09"
     };
 
     // Initialize Firebase
